--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     ext {
         buildToolsVersion = "28.0.3"
-        minSdkVersion = 16
+        minSdkVersion = 21
         compileSdkVersion = 28
         targetSdkVersion = 28
+        castFrameworkVersion = "18.0.0"
     }
     repositories {
         google()
