--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
+    "android:dev": "npx react-native run-android && react-native start --reset-cache",
     "lint": "eslint .",
     "postinstall": "node ../scripts/examples_postinstall.js"
   },
